--- a/hccu/css/inc/_slider.scss
+++ b/hccu/css/inc/_slider.scss
@@ -5,40 +5,47 @@
 #home-slider {
 	.slick-slide {
 		position: relative;
-		height: 399px; /*define the height of slide*/
+		height: 399px;
+		/*define the height of slide*/
 		@extend %bgcover;
 		@include transition(height .3s ease);
 		background-position: 50% 100% !important;
+
 		a.slick-slide {
 			width: 100%;
 			height: 100%;
 		}
 	}
+
 	.slider-caption {
 		width: 100%;
 		display: inline-block;
 		padding: 37px 99px;
 		text-align: left;
 		max-width: 623px;
+
 		h3 {
 			color: #fff;
 			font-size: 36px;
 			font-family: 'myriadpro-regular';
 			line-height: 45px;
-			strong{
-				color: #339933;
+
+			strong {
+				color: var(--brandingPrimaryBlue-400);
 				font-weight: 400;
 				margin-bottom: 11px;
 				display: inline-block;
 			}
 		}
-		p{
+
+		p {
 			font-family: "Lato", sans-serif;
 			color: #fff;
 			font-size: 14px;
 			line-height: 24px;
 		}
-		a{
+
+		a {
 			font-family: 'Lato', sans-serif;
 			font-size: 16px;
 			color: #fff;
@@ -50,12 +57,14 @@
 			font-weight: 700;
 			border-radius: 5px;
 			border-bottom: 4px solid #fdcb01;
-			&:hover{
+
+			&:hover {
 				background-color: #fdcb01;
 				border-bottom: 4px solid #ff9900;
 			}
 		}
 	}
+
 	.slider-caption.caption-right {
 		float: right;
 	}
@@ -64,10 +73,12 @@
 @media only screen and (max-width: 1024px) {
 	#home-slider {
 		.slick-slide {
-			height: 360px; /*define the height of slide*/
+			height: 360px;
+			/*define the height of slide*/
 		}
 	}
-	.form{
+
+	.form {
 		.wpb_raw_code {
 			margin-bottom: 0;
 		}
@@ -77,7 +88,8 @@
 @media only screen and (max-width: 634px) {
 	#home-slider {
 		.slick-slide {
-			height: 332px; /*define the height of slide*/
+			height: 332px;
+			/*define the height of slide*/
 		}
 	}
 }
