--- a/hccu/css/custom.scss
+++ b/hccu/css/custom.scss
@@ -1409,7 +1409,7 @@ input[type=search] {
 				position: absolute;
 				height: 1px;
 				width: 70px;
-				background-color: #ff9900;
+				background-color: var(--brandingPrimaryBlue-400);
 				left: 50%;
 				transform: translateX(-50%);
 				bottom: -9px;
@@ -1429,7 +1429,7 @@ input[type=search] {
 			font-family: 'myriadpro-regular', sans-serif;
 			color: #fff;
 			text-transform: uppercase;
-			border-bottom: 2px solid #ff9900;
+			border-bottom: 2px solid var(--brandingPrimaryBlue-400);
 			padding: 12px 30px;
 			position: absolute;
 			bottom: -11px;
@@ -1479,8 +1479,8 @@ input[type=search] {
 		}
 
 		.button {
-			background-color: #3d9b35;
-			border-bottom: 2px solid #005442;
+			background-color: var(--brandingPrimaryGreen-400);
+			border-bottom: 2px solid var(--brandingPrimaryGreen-400);
 		}
 
 		.repeater-block {
@@ -1489,7 +1489,7 @@ input[type=search] {
 
 			h6 {
 				&:after {
-					background-color: #005643;
+					background-color: var(--brandingPrimaryGreen-400);
 				}
 			}
 		}
