--- a/hccu/css/media-screens.css
+++ b/hccu/css/media-screens.css
@@ -4,7 +4,7 @@
   #menu-sidebar-menu .current-menu-item {
     background-color: #98cb66;
     position: relative;
-    box-shadow: 1px 1px 1px 1px var(--brandingPrimaryBlue-400);
+    box-shadow: 1px 1px 1px 1px var(--brandingPrimaryBlue-400) !important;
   }
   #menu-sidebar-menu .current-menu-item:after {
     background-image: url(../images/arr.png);
@@ -374,7 +374,7 @@
   .top-bar .header-menu > li > .submenu {
     padding: 19px 26px;
     z-index: 1000;
-    border: 3px solid #ff9900;
+    border: 3px solid var(--brandingPrimaryBlue-400) !important;
     position: absolute;
     padding-right: 0;
   }
@@ -401,7 +401,7 @@
   .top-bar .header-menu li.current_page_ancestor > a,
   .top-bar .header-menu li.current_page_parent > a {
     /* Style of Current page and Ancestor page */
-    background: #98cb66;
+    background: var(--brandingPrimaryGreen-400) !important;
     color: #000;
     padding: 0 24px;
   }
@@ -446,7 +446,7 @@
   }
   .top-bar .submenu .submenu > li {
     padding-left: 7px;
-    border-left: 2px solid #ff9900;
+    border-left: 2px solid var(--brandingPrimaryBlue-400) !important;
     width: 100%;
   }
   .top-bar .submenu .submenu > li:last-child {
@@ -465,7 +465,7 @@
   }
   .top-bar .submenu .submenu > li > a:hover {
     box-shadow: none;
-    color: #ff9900;
+    color: var();
   }
   .top-bar .submenu .submenu > li > a:hover:after {
     display: none;
@@ -526,7 +526,7 @@
     padding-left: 10px;
     position: relative;
   }
-  .top-bar .submenu > .last:before {
+  /* .top-bar .submenu > .last:before {
     position: absolute;
     content: "";
     background-image: url(../images/menu.png);
@@ -535,20 +535,20 @@
     height: 122px;
     left: -8px;
     top: -19px;
-  }
+  } */
   .top-bar .submenu > .last:after {
     content: "";
     position: absolute;
     width: 2px;
     height: 181px;
     left: -9px;
-    background-color: #ff9900;
+    background-color: var(--brandingPrimaryBlue-400) !important;
     bottom: 15px;
   }
   .top-bar .submenu > .last a {
     font-family: "myriadpro-regular", sans-serif;
     font-size: 2.25em;
-    color: var(--brandingPrimaryBlue-400);
+    color: var(--brandingPrimaryBlue-400) !important;
     font-weight: 300;
     text-decoration: none;
     text-align: center;
@@ -573,7 +573,7 @@
     content: ">";
     position: absolute;
     right: -10px;
-    color: #ff9900;
+    color: var(--brandingPrimaryBlue-400) !important;
     top: 0;
     opacity: 0;
     transition: all;
@@ -657,9 +657,9 @@
     width: 18.25% !important;
   }
   #menu-sidebar-menu .current-menu-item {
-    background-color: #98cb66;
+    background-color: var(--brandingPrimaryGreen-400) !important;
     position: relative;
-    box-shadow: 1px 1px 0px 1px var(--brandingPrimaryBlue-400);
+    box-shadow: 1px 1px 0px 1px var(--brandingPrimaryBlue-400) !important;
   }
   #menu-sidebar-menu .current-menu-item:after {
     background-image: url(../images/arr.png);
@@ -681,7 +681,7 @@
   #menu-sidebar-menu .menu-item:hover {
     background-color: #98cb66;
     position: relative;
-    box-shadow: 1px 1px 0 1px var(--brandingPrimaryBlue-400);
+    box-shadow: 1px 1px 0 1px var(--brandingPrimaryBlue-400) !important;
   }
   #menu-sidebar-menu .menu-item:hover a {
     color: #fff;
