--- a/hccu/style.css
+++ b/hccu/style.css
@@ -1,7 +1,7 @@
 /**
-    Theme Name: Health Center Credit Union
-    Description: HCCU custom theme
-    Version: 1.1
+    Theme Name: Health Center Credit Union GBD
+    Description: GBD HCCU custom theme
+    Version: 1.2
     Author: GBD
     License: GNU General Public License v2
     License URI: http://www.gnu.org/licenses/gpl-2.0.html
