remove important color style on menu sidebar

--- a/hccu/style.css
+++ b/hccu/style.css
@@ -91,10 +91,10 @@ body
   background-color: #fff;
 }
 
-#menu-sidebar-checking-services .menu-item > .test-a {
+/* #menu-sidebar-checking-services .menu-item > .test-a {
   color: #000 !important;
   background-color: #fff;
-}
+} */
 
 #menu-sidebar-menu .menu-item a {
   color: #000000;
